[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["a5chin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.1"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
